# financifyBackend

./: README.md  app.py  pyproject.toml  requirements.txt  start_server.sh
api/: index.py
financial_mapper/: __init__.py  config.py  excel_parser.py  fuzzy_matcher.py  logging_setup.py  normalizer.py  pipeline.py  schema.py  schema_builder.py  synonym_mapper.py  ui_screen.kt  validator.py
financial_mapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
financial_mapper/data/: custom_synonyms.json  sample_balance_sheet.csv  sample_balance_sheet.json
financial_mapper/examples/: run_example.py
static/: style.css
templates/: base.html  index.html  results.html  results_multi_year.html
tests/: test_fuzzy_matcher.py  test_normalizer.py  test_pipeline.py  test_schema_builder.py  test_synonym_mapper.py  test_validator.py
web/: ratio_calculator.py
